cf RDM-432 Асинхронная публикация.